@@ -1,13 +1,18 @@
 package ru.serega6531.packmate.controller;
 
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.RestController;
 import ru.serega6531.packmate.model.Pattern;
 import ru.serega6531.packmate.model.pojo.PatternDto;
 import ru.serega6531.packmate.service.PatternService;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/pattern/")
@@ -24,7 +29,7 @@ public class PatternController {
     public List<PatternDto> getPatterns() {
         return service.findAll()
                 .stream().map(service::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @PostMapping("/{id}")
