@@ -1,14 +1,17 @@
 package ru.serega6531.packmate.controller;
 
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.web.bind.annotation.*;
-import ru.serega6531.packmate.model.pojo.StreamPagination;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
 import ru.serega6531.packmate.model.pojo.StreamDto;
+import ru.serega6531.packmate.model.pojo.StreamPagination;
 import ru.serega6531.packmate.service.StreamService;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/stream/")
@@ -25,14 +28,14 @@ public class StreamController {
     public List<StreamDto> getStreams(@RequestBody StreamPagination pagination) {
         return service.findAll(pagination, Optional.empty(), pagination.isFavorites()).stream()
                 .map(service::streamToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @PostMapping("/{port}")
     public List<StreamDto> getStreams(@PathVariable int port, @RequestBody StreamPagination pagination) {
         return service.findAll(pagination, Optional.of(port), pagination.isFavorites()).stream()
                 .map(service::streamToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @PostMapping("/{id}/favorite")
